--- a/sections/10_accessibility_testing.tex
+++ b/sections/10_accessibility_testing.tex
@@ -7,3 +7,8 @@
 
 % Add your LaTeX content below this line
 
+\subsection{Accessibility Implementation and Testing}
+
+In this project, we plan to implement accessibility features following the WCAG 2.1 AA standards. Specific measures include providing alternative text descriptions for images, ensuring all buttons have clear text labels, and designing visible focus indicators to aid users navigating via keyboard. These efforts aim to improve usability for users with various disabilities, including visual impairments. Additionally, the interface design emphasizes overall accessibility by employing a clean layout and high-contrast color schemes to ensure content is clear and easy to read; font sizes are appropriate to accommodate different levels of visual ability. Basic compatibility with keyboard navigation and screen readers is also supported to enhance ease of use.
+
+Regarding cultural content, we implemented language toggle functionality between Māori and English and applied permission control mechanisms to ensure appropriate content display that respects Māori cultural characteristics. This also helps make cultural information more accessible. During the testing phase, the team conducted internal trials and collected feedback, performing simple evaluations and making adjustments accordingly. However, no real users with disabilities have been involved yet. After the prototype is finalized, we plan to invite a broader user group—including those with special needs—for more comprehensive accessibility testing, aiming to continuously improve the system’s accessibility and overall user experience.
