--- a/sections/11_evaluation_results.tex
+++ b/sections/11_evaluation_results.tex
@@ -7,3 +7,10 @@
 
 % Add your LaTeX content below this line
 
+\subsection{Evaluation and Validation Results}
+
+At this stage of the project, an initial internal evaluation was conducted to assess the usability and clarity of the prototype. This evaluation involved all project team members, as well as the course tutor, who interacted with the system and provided feedback based on their experience. While this does not constitute formal user testing, it offered valuable preliminary insights for refinement.
+
+Several key issues emerged from the internal review. First, the distinction between the “Collections” and “Records” sections on the homepage was found to be unclear, indicating a need for improved information hierarchy and clearer categorization. Additionally, although the homepage featured a range of functions, it lacked sufficient user guidance, particularly for first-time users. Within the side panel module, the placement of the search bar among other tools appeared visually disjointed and contextually inconsistent. Furthermore, the current backend access control logic was deemed inadequate for managing content permissions effectively, especially with respect to role-based cultural content. The top navigation bar was also considered overly complex, with too many functions competing for user attention.
+
+As the prototype remains in a conceptual phase, with many features still under development, formal usability testing with external users—especially the intended cultural communities and child users—has not yet been conducted. However, such testing will be a critical component of the next development stage. The project team plans to conduct comprehensive user validation during future UI/UX refinement, to ensure that the final product aligns with user needs, supports accessibility, and effectively fulfills its cultural and educational objectives.
